# llm-steuererklaerung

./: .env.example  .gitignore  CLAUDE.md  README.md  bewirtungsbeleg.py  generate_reisekosten_excel.py  main.py  main_fastapi.py  pyproject.toml  server.py  streamlit.py
data/: reclassify_plan.json
invoice_app/: __init__.py  classifier.py  export.py  gmail_sync.py  index.py  models.py  review.py  storage.py
scripts/: bewirtungsbeleg-pdf.py  tax-2024.sh  uber-eats.py
