[project]
name = "llm-invoice-sorter"
version = "0.1.0"
description = "Gmail Integration with local LLM to sort invoices into categories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "browser-cookie3>=0.20.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-api-python-client>=2.167.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "ics>=0.7.2",
    "ipykernel>=6.29.5",
    "langfuse>=2.60.7",
    "ollama>=0.4.8",
    "openai>=1.75.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pymupdf>=1.25.5",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.1",
    "selenium>=4.33.0",
    "streamlit>=1.45.1",
    "supabase>=2.15.1",
    "uvicorn>=0.34.2",
    "watchdog>=6.0.0",
    "supabase>=2.3.0",
]
